--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "minimalista",
     "dark mode"
   ],
-  "author": "Seu Nome",
+  "author": "LUTHER",
   "license": "MIT",
   "dependencies": {
-    "font-awesome": "^6.0.0",
+    "@fortawesome/fontawesome-free" "^6.0.0",
     "vite": "^2.0.0"
   },
   "devDependencies": {},
-  "homepage": "https://discord.gg/seu-link",
+  "homepage": "https://discord.gg/d9DCUBdtdn",
   "repository": {
     "type": "git",
-    "url": "https://github.com/seu-usuario/fidelis-landing-page.git"
+    "url": ""
   }
 }
